ending the para with tag

--- a/indexgit.html
+++ b/indexgit.html
@@ -13,7 +13,7 @@ style="width:100%;max-width:960px"></div>
 <p>A new line in our file! added by me.</p>
 <p>This line is here to show how merging works.</p>
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
-<p>This is Push request from local Git to Github.
+<p>This is Push request from local Git to Github.</p>
 
 </body>
 </html>
