--- a/indexgit.html
+++ b/indexgit.html
@@ -14,6 +14,7 @@ style="width:100%;max-width:960px"></div>
 <p>This line is here to show how merging works.</p>
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 <p>This is Push request from local Git to Github.</p>
+<h1>Hello My name is Yogesh Rana</h1>
 
 </body>
 </html>
