--- a/indexgit.html
+++ b/indexgit.html
@@ -3,14 +3,15 @@
 <head>
 <title>Hello World!</title>
 <link rel="stylesheet" href="bluestyle.css">
+  <meta author="yogesh">
 </head>
 <body>
 
 <h1>Hello world!</h1>
 <div><img src="img_hello_world.jpg" alt="Hello World from Space"
-style="width:100%;max-width:960px"></div>
+style="width:80%;max-width:860px"></div>
 <p>This is the first file in my new Git Repo.</p>
-<p>A new line in our file! added by me.</p>
+<p>A new line in our file! added by yogesh rana.</p>
 <p>This line is here to show how merging works.</p>
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 <p>This is Push request from local Git to Github.</p>
