--- a/indexgit.html
+++ b/indexgit.html
@@ -16,6 +16,7 @@ style="width:80%;max-width:860px"></div>
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 <p>This is Push request from local Git to Github.</p>
 <h1>Hello My name is Yogesh Rana</h1>
-
+<h6>this is <code>h6</code>tag</h6>
+  
 </body>
 </html>
